@@ -1,55 +1,19 @@
 package editor.buildingeditor2;
 
-import java.awt.*;
-import java.awt.event.*;
-import javax.swing.*;
-import javax.swing.GroupLayout;
-import javax.swing.border.*;
-import javax.swing.event.*;
-
-import formats.nsbtx2.*;
-import net.miginfocom.swing.*;
 import editor.buildingeditor2.animations.AddBuildAnimationDialog;
-import editor.buildingeditor2.animations.ModelAnimation;
 import editor.buildingeditor2.animations.BuildAnimeListDPPt;
+import editor.buildingeditor2.animations.ModelAnimation;
 import editor.buildingeditor2.areabuild.AddBuildModelDialog;
 import editor.buildingeditor2.areabuild.AreaBuild;
 import editor.buildingeditor2.areadata.AreaDataDPPt;
 import editor.buildingeditor2.buildfile.Build;
 import editor.buildingeditor2.buildfile.BuildFile;
 import editor.handler.MapEditorHandler;
-import formats.nsbtx2.Nsbtx2;
-import formats.nsbtx2.NsbtxLoader2;
-import formats.nsbtx2.NsbtxPalette;
-import formats.nsbtx2.NsbtxTexture;
-import formats.nsbtx2.NsbtxWriter;
-
-import java.awt.Color;
-
-import utils.Utils.MutableBoolean;
-
-import java.awt.Component;
-import java.awt.image.BufferedImage;
-import java.io.File;
-import java.io.FilenameFilter;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Set;
-import java.util.TreeSet;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-import javax.swing.DefaultListCellRenderer;
-import javax.swing.DefaultListModel;
-import javax.swing.ImageIcon;
-import javax.swing.JFileChooser;
-import javax.swing.JLabel;
-import javax.swing.JList;
-import javax.swing.JOptionPane;
-import javax.swing.filechooser.FileNameExtensionFilter;
-
-import nitroreader.nsbca.NSBCA;
+import editor.mapmatrix.MapMatrix;
+import formats.nsbtx2.*;
+import lombok.Getter;
+import lombok.extern.log4j.Log4j2;
+import net.miginfocom.swing.MigLayout;
 import nitroreader.nsbca.NSBCAreader;
 import nitroreader.nsbta.NSBTA;
 import nitroreader.nsbta.NSBTAreader;
@@ -60,37 +24,58 @@ import nitroreader.shared.G3Dheader;
 import renderer.NitroDisplayGL;
 import renderer.ObjectGL;
 import utils.Utils;
+import utils.Utils.MutableBoolean;
+
+import javax.swing.*;
+import javax.swing.border.LineBorder;
+import javax.swing.border.TitledBorder;
+import javax.swing.event.ChangeEvent;
+import javax.swing.event.ListSelectionEvent;
+import javax.swing.filechooser.FileNameExtensionFilter;
+import java.awt.*;
+import java.awt.event.ActionEvent;
+import java.awt.image.BufferedImage;
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.util.*;
+import java.util.List;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 /**
  * @author Trifindo, JackHack96
  */
+@Log4j2
+@SuppressWarnings({"FieldCanBeLocal", "SpellCheckingInspection", "unused", "ExtractMethodRecommender"})
+@Getter
 public class BuildingEditorDialogDPPt extends JDialog {
     private MapEditorHandler handler;
     private BuildHandlerDPPt buildHandler;
 
-    private ImageIcon nsbmdIcon;
-    private ImageIcon nsbtxIcon;
-    private ImageIcon areaDataIcon;
-    private ArrayList<ImageIcon> animIcons;
-    private ArrayList<Integer> selectedAnimIconIndices;
+    private final ImageIcon nsbmdIcon;
+    private final ImageIcon            nsbtxIcon;
+    private final ImageIcon            areaDataIcon;
+    private final ArrayList<ImageIcon> animIcons;
+    private       ArrayList<Integer>   selectedAnimIconIndices;
     private ArrayList<Integer> animIconIndices;
 
-    private MutableBoolean jlBuildModelEnabled = new MutableBoolean(true);
-    private MutableBoolean jlMaterialOrderEnabled = new MutableBoolean(true);
-    private MutableBoolean jlBuildAnimeListEnabled = new MutableBoolean(true);
-    private MutableBoolean jlAreaDataListEnabled = new MutableBoolean(true);
-    private MutableBoolean jlBuildTsetListEnabled = new MutableBoolean(true);
-    private MutableBoolean jlAreaBuildListEnabled = new MutableBoolean(true);
-    private MutableBoolean jlAnimationsListEnabled = new MutableBoolean(true);
-    private MutableBoolean jlBuildFileEnabled = new MutableBoolean(true);
+    private final MutableBoolean jlBuildModelEnabled     = new MutableBoolean(true);
+    private final MutableBoolean jlMaterialOrderEnabled  = new MutableBoolean(true);
+    private final MutableBoolean jlBuildAnimeListEnabled = new MutableBoolean(true);
+    private final MutableBoolean jlAreaDataListEnabled  = new MutableBoolean(true);
+    private final MutableBoolean jlBuildTsetListEnabled  = new MutableBoolean(true);
+    private final MutableBoolean jlAreaBuildListEnabled  = new MutableBoolean(true);
+    private final MutableBoolean jlAnimationsListEnabled = new MutableBoolean(true);
+    private final MutableBoolean jlBuildFileEnabled      = new MutableBoolean(true);
 
-    private MutableBoolean jcbAnimationTypeEnabled = new MutableBoolean(true);
+    private final MutableBoolean jcbAnimationTypeEnabled = new MutableBoolean(true);
 
-    private MutableBoolean jtfBuildTsetEnabled = new MutableBoolean(true);
-    private MutableBoolean jtfMapTsetEnabled = new MutableBoolean(true);
-    private MutableBoolean jtfUnknown1Enabled = new MutableBoolean(true);
-    private MutableBoolean jcbAreaTypeEnabled = new MutableBoolean(true);
-    private MutableBoolean buildPropertiesEnabled = new MutableBoolean(true);
+    private final MutableBoolean jtfBuildTsetEnabled = new MutableBoolean(true);
+    private final MutableBoolean jtfMapTsetEnabled  = new MutableBoolean(true);
+    private final MutableBoolean jtfUnknown1Enabled     = new MutableBoolean(true);
+    private final MutableBoolean jcbAreaTypeEnabled     = new MutableBoolean(true);
+    private final MutableBoolean buildPropertiesEnabled = new MutableBoolean(true);
 
     private static final Color redColor = new Color(255, 200, 200);
     private static final Color greenColor = new Color(200, 255, 200);
@@ -99,21 +84,21 @@ public class BuildingEditorDialogDPPt extends JDialog {
     public BuildingEditorDialogDPPt(Window owner) {
         super(owner);
         initComponents();
-        jTabbedPane1.setIconAt(0, new ImageIcon(getClass().getResource("/icons/BuildingIcon.png")));
-        jTabbedPane1.setIconAt(1, new ImageIcon(getClass().getResource("/icons/AreaDataIcon.png")));
-        jTabbedPane1.setIconAt(2, new ImageIcon(getClass().getResource("/icons/NsbtxIcon.png")));
-        jTabbedPane1.setIconAt(3, new ImageIcon(getClass().getResource("/icons/AnimationIcon.png")));
-        jTabbedPane1.setIconAt(4, new ImageIcon(getClass().getResource("/icons/mapIcon.png")));
+        jTabbedPane1.setIconAt(0, new ImageIcon(Objects.requireNonNull(getClass().getResource("/icons/BuildingIcon.png"))));
+        jTabbedPane1.setIconAt(1, new ImageIcon(Objects.requireNonNull(getClass().getResource("/icons/AreaDataIcon.png"))));
+        jTabbedPane1.setIconAt(2, new ImageIcon(Objects.requireNonNull(getClass().getResource("/icons/NsbtxIcon.png"))));
+        jTabbedPane1.setIconAt(3, new ImageIcon(Objects.requireNonNull(getClass().getResource("/icons/AnimationIcon.png"))));
+        jTabbedPane1.setIconAt(4, new ImageIcon(Objects.requireNonNull(getClass().getResource("/icons/mapIcon.png"))));
 
-        nsbmdIcon = new ImageIcon(getClass().getResource("/icons/NsbmdIcon.png"));
-        nsbtxIcon = new ImageIcon(getClass().getResource("/icons/NsbtxIcon.png"));
-        areaDataIcon = new ImageIcon(getClass().getResource("/icons/AreaDataIcon.png"));
+        nsbmdIcon = new ImageIcon(Objects.requireNonNull(getClass().getResource("/icons/NsbmdIcon.png")));
+        nsbtxIcon = new ImageIcon(Objects.requireNonNull(getClass().getResource("/icons/NsbtxIcon.png")));
+        areaDataIcon = new ImageIcon(Objects.requireNonNull(getClass().getResource("/icons/AreaDataIcon.png")));
 
         animIcons = new ArrayList<>(4);
-        animIcons.add(new ImageIcon(getClass().getResource("/icons/NsbcaIcon.png")));
-        animIcons.add(new ImageIcon(getClass().getResource("/icons/NsbtaIcon.png")));
-        animIcons.add(new ImageIcon(getClass().getResource("/icons/NsbtpIcon.png")));
-        animIcons.add(new ImageIcon(getClass().getResource("/icons/NsbmaIcon.png")));
+        animIcons.add(new ImageIcon(Objects.requireNonNull(getClass().getResource("/icons/NsbcaIcon.png"))));
+        animIcons.add(new ImageIcon(Objects.requireNonNull(getClass().getResource("/icons/NsbtaIcon.png"))));
+        animIcons.add(new ImageIcon(Objects.requireNonNull(getClass().getResource("/icons/NsbtpIcon.png"))));
+        animIcons.add(new ImageIcon(Objects.requireNonNull(getClass().getResource("/icons/NsbmaIcon.png"))));
 
         selectedAnimIconIndices = new ArrayList<>();
         animIconIndices = new ArrayList<>();
@@ -193,7 +178,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
                 nsbtxPanel.updateViewPaletteNameList(0);
                 nsbtxPanel.updateView();
             } catch (Exception ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
         }
     }
@@ -262,11 +247,11 @@ public class BuildingEditorDialogDPPt extends JDialog {
             fc.setFileFilter(new FileNameExtensionFilter("NSBMD (*.nsbmd)", "nsbmd"));
             fc.setApproveButtonText("Save");
             fc.setDialogTitle("Save the NSBMD Building Model");
-            try {//TODO: Replace this with some index bounds cheking?
+            try {
                 String fileName = buildHandler.getBuildModelList().getModelsName().get(jlBuildModel.getSelectedIndex());
                 fc.setSelectedFile(new File(fileName + ".nsbmd"));
             } catch (Exception ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
             int returnVal = fc.showOpenDialog(this);
             if (returnVal == JFileChooser.APPROVE_OPTION) {
@@ -291,11 +276,11 @@ public class BuildingEditorDialogDPPt extends JDialog {
         if (buildHandler.getBuildModelList() != null) {
             ArrayList<Integer> occurrences = buildHandler.getAreaBuildList().getBuildingOccurrences(jlBuildModel.getSelectedIndex());
             if (!occurrences.isEmpty()) {
-                String occurenceIDs = "";
+                StringBuilder occurenceIDs = new StringBuilder();
                 for (int i = 0; i < occurrences.size() - 1; i++) {
-                    occurenceIDs += String.valueOf(occurrences.get(i)) + ", ";
+                    occurenceIDs.append(occurrences.get(i)).append(", ");
                 }
-                occurenceIDs += String.valueOf(occurrences.get(occurrences.size() - 1));
+                occurenceIDs.append(occurrences.getLast());
 
                 int returnVal2 = JOptionPane.showConfirmDialog(this.getContentPane(),
                         "This building is being used in the following tilesets: \n" + occurenceIDs + "\n"
@@ -373,7 +358,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
                 }
             } else {
                 JOptionPane.showMessageDialog(this, "Buildings can't have more than "
-                                + String.valueOf(BuildAnimeListDPPt.MAX_ANIMS_PER_BUILDING) + " animations.",
+                                + BuildAnimeListDPPt.MAX_ANIMS_PER_BUILDING + " animations.",
                         "Can't add animation", JOptionPane.ERROR_MESSAGE);
             }
         }
@@ -383,7 +368,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
         if (buildHandler.getBuildModelList() != null
                 && buildHandler.getBuildModelAnimeList() != null
                 && buildHandler.getBuildModelAnims() != null) {
-            if (buildHandler.getBuildModelAnimeList().getAnimations().get(jlBuildModel.getSelectedIndex()).size() > 0) {
+            if (!buildHandler.getBuildModelAnimeList().getAnimations().get(jlBuildModel.getSelectedIndex()).isEmpty()) {
                 final AddBuildAnimationDialog dialog = new AddBuildAnimationDialog(handler.getMainFrame());
                 dialog.init(buildHandler.getBuildModelList().getModelsData().get(jlBuildModel.getSelectedIndex()),
                         buildHandler.getBuildModelAnims(),
@@ -501,11 +486,11 @@ public class BuildingEditorDialogDPPt extends JDialog {
             fc.setFileFilter(new FileNameExtensionFilter(type.toUpperCase() + " (*." + type + ")", type));
             fc.setApproveButtonText("Save");
             fc.setDialogTitle("Save the Animation");
-            try {//TODO: Replace this with some index bounds cheking?
+            try {
                 String fileName = buildHandler.getBuildModelAnims().getAnimations().get(jlAnimationsList.getSelectedIndex()).getName();
                 fc.setSelectedFile(new File(fileName + "." + type));
             } catch (Exception ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
             int returnVal = fc.showOpenDialog(this);
             if (returnVal == JFileChooser.APPROVE_OPTION) {
@@ -553,15 +538,15 @@ public class BuildingEditorDialogDPPt extends JDialog {
         if (buildHandler.getBuildModelList() != null) {
             ArrayList<Integer> occurrences = buildHandler.getAreaBuildList().getBuildingOccurrences(jlBuildModel.getSelectedIndex());
             if (!occurrences.isEmpty()) {
-                String occurenceIDs = "";
+                StringBuilder occurenceIDs = new StringBuilder();
                 for (int i = 0; i < occurrences.size() - 1; i++) {
-                    occurenceIDs += String.valueOf(occurrences.get(i)) + ", ";
+                    occurenceIDs.append(occurrences.get(i)).append(", ");
                 }
-                occurenceIDs += String.valueOf(occurrences.get(occurrences.size() - 1));
+                occurenceIDs.append(occurrences.getLast());
 
                 JOptionPane.showMessageDialog(this,
                         "This building is being used in the following building tilesets: \n" + occurenceIDs,
-                        String.valueOf(occurrences.size()) + " occurrences found", JOptionPane.INFORMATION_MESSAGE);
+                        occurrences.size() + " occurrences found", JOptionPane.INFORMATION_MESSAGE);
             } else {
                 JOptionPane.showMessageDialog(this,
                         "This building is not included in any building tileset.",
@@ -605,7 +590,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
                 int value = Integer.parseInt(jtfBuildTset.getText());
                 areaData.setBuildingTilesetID(value);
             } catch (NumberFormatException ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
             jtfBuildTsetEnabled.value = false;
             jtfBuildTset.setText(String.valueOf(areaData.getBuildingTilesetID()));
@@ -622,7 +607,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
                 int value = Integer.parseInt(jtfMapTset.getText());
                 areaData.setMapTilesetID(value);
             } catch (NumberFormatException ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
             jtfMapTsetEnabled.value = false;
             jtfMapTset.setText(String.valueOf(areaData.getMapTilesetID()));
@@ -639,7 +624,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
                 int value = Integer.parseInt(jtfUnknown1.getText());
                 areaData.setUnknown1(value);
             } catch (NumberFormatException ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
             jtfUnknown1Enabled.value = false;
             jtfUnknown1.setText(String.valueOf(areaData.getUnknown1()));
@@ -666,27 +651,13 @@ public class BuildingEditorDialogDPPt extends JDialog {
 
                 loadAnimationInNitroDisplay(nitroDisplayGL, 0, anim);
 
-                /*
-                if (anim.getAnimationType() == BuildAnimation.TYPE_NSBCA) {
-                    NSBCAreader reader = new NSBCAreader(new ByteReader(anim.getData()));
-                    nitroDisplayGL.getObjectGL(0).setNsbca((NSBCA) reader.readFile());
-                    nitroDisplayGL.requestUpdate();
-                } else if (anim.getAnimationType() == BuildAnimation.TYPE_NSBTA) {
-                    NSBTAreader reader = new NSBTAreader(new ByteReader(anim.getData()));
-                    nitroDisplayGL.getObjectGL(0).setNsbta((NSBTA) reader.readFile());
-                    nitroDisplayGL.requestUpdate();
-                } else if (anim.getAnimationType() == BuildAnimation.TYPE_NSBTP) {
-                    NSBTPreader reader = new NSBTPreader(new ByteReader(anim.getData()));
-                    nitroDisplayGL.getObjectGL(0).setNsbtp((NSBTP) reader.readFile());
-                    nitroDisplayGL.requestUpdate();
-                }*/
- /*else if (anim.getAnimationType() == BuildAnimation.TYPE_NSBMA) {
+                /*else if (anim.getAnimationType() == BuildAnimation.TYPE_NSBMA) {
                     NSBMAreader reader = new NSBMAreader(new ByteReader(anim.getData()));
                     nitroDisplayGL1.getHandler().setNsbma((NSBMA) reader.readFile());
                     nitroDisplayGL1.requestUpdate();
                 }*/
             } catch (Exception ex) {
-                //ex.printStackTrace();
+                //log.warn(ex);
             }
         }
 
@@ -729,7 +700,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
                     nitroDisplayAreaData.fitCameraToModel(0);
                     nitroDisplayAreaData.requestUpdate();
                 } catch (Exception ex) {
-                    ex.printStackTrace();
+                    log.warn(ex);
                 }
             }
         }
@@ -787,14 +758,14 @@ public class BuildingEditorDialogDPPt extends JDialog {
                         JOptionPane.showMessageDialog(this,
                                 "Textures and palettes succesfully imported.\n"
                                         + "(Some textures or palettes were already in the tileset)\n"
-                                        + "- " + String.valueOf(addedTextures) + " textures added\n"
-                                        + "- " + String.valueOf(addedPalettes) + " palettes added",
+                                        + "- " + addedTextures + " textures added\n"
+                                        + "- " + addedPalettes + " palettes added",
                                 "Data imported", JOptionPane.INFORMATION_MESSAGE);
                     } else {
                         JOptionPane.showMessageDialog(this,
                                 "Textures and palettes succesfully imported.\n"
-                                        + "- " + String.valueOf(addedTextures) + " textures added\n"
-                                        + "- " + String.valueOf(addedPalettes) + " palettes added",
+                                        + "- " + addedTextures + " textures added\n"
+                                        + "- " + addedPalettes + " palettes added",
                                 "Data imported", JOptionPane.INFORMATION_MESSAGE);
                     }
                 } else {
@@ -808,7 +779,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
                         "No NSBTX in the NSMBD", JOptionPane.ERROR_MESSAGE);
             }
         } catch (Exception ex) {
-            ex.printStackTrace();
+            log.warn(ex);
             JOptionPane.showMessageDialog(this,
                     "There was a problem importing the textures and palettes.\n"
                             + "Make sure that you have the converter program in the converter folder.",
@@ -840,7 +811,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
                     updateViewAreaBuildList(buildHandler.getAreaBuildList().getAreaBuilds().size() - 1);
 
                 } catch (Exception ex) {
-                    ex.printStackTrace();
+                    log.warn(ex);
                     JOptionPane.showMessageDialog(this,
                             "There was a problem adding the NSBTX",
                             "Can't add NSBTX", JOptionPane.ERROR_MESSAGE);
@@ -870,7 +841,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
 
                     updateViewBuildTsetList(jlBuildTsetList.getSelectedIndex());
                 } catch (Exception ex) {
-                    ex.printStackTrace();
+                    log.warn(ex);
                     JOptionPane.showMessageDialog(this,
                             "There was a problem adding the NSBTX",
                             "Can't add NSBTX", JOptionPane.ERROR_MESSAGE);
@@ -890,11 +861,11 @@ public class BuildingEditorDialogDPPt extends JDialog {
             fc.setFileFilter(new FileNameExtensionFilter("NSBTX (*.nsbtx)", "nsbtx"));
             fc.setApproveButtonText("Save");
             fc.setDialogTitle("Save Building's NSBTX");
-            try {//TODO: Replace this with some index bounds cheking?
-                String fileName = "Building Tileset " + String.valueOf(jlBuildTsetList.getSelectedIndex());
+            try {
+                String fileName = "Building Tileset " + jlBuildTsetList.getSelectedIndex();
                 fc.setSelectedFile(new File(fileName + ".nsbtx"));
             } catch (Exception ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
             int returnVal = fc.showOpenDialog(this);
             if (returnVal == JFileChooser.APPROVE_OPTION) {
@@ -958,8 +929,8 @@ public class BuildingEditorDialogDPPt extends JDialog {
                 if (removedTexs > 0 || removedPals > 0) {
                     JOptionPane.showMessageDialog(this,
                             "Textures and palettes succesfully removed.\n"
-                                    + "- " + String.valueOf(removedTexs) + " textures removed\n"
-                                    + "- " + String.valueOf(removedPals) + " palettes removed",
+                                    + "- " + removedTexs + " textures removed\n"
+                                    + "- " + removedPals + " palettes removed",
                             "Data removed", JOptionPane.INFORMATION_MESSAGE);
                 } else {
                     JOptionPane.showMessageDialog(this,
@@ -980,7 +951,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
                 nsbtxPanel.updateViewPaletteNameList(0);
                 nsbtxPanel.updateView();
             } catch (Exception ex2) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
             JOptionPane.showMessageDialog(this,
                     "There was a problem removing the textures and palettes.",
@@ -1055,12 +1026,12 @@ public class BuildingEditorDialogDPPt extends JDialog {
             fc.setFileFilter(new FileNameExtensionFilter("BLD (*.bld)", "bld"));
             fc.setApproveButtonText("Save");
             fc.setDialogTitle("Save Building File");
-            try {//TODO: Replace this with some index bounds cheking?
+            try {
                 File file = new File(handler.getMapMatrix().filePath);
                 String fileName = Utils.removeExtensionFromPath(file.getName()) + "." + BuildFile.fileExtension;
                 fc.setSelectedFile(new File(fileName));
             } catch (Exception ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
             int returnVal = fc.showOpenDialog(this);
             if (returnVal == JFileChooser.APPROVE_OPTION) {
@@ -1100,7 +1071,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
 
     private void jbRemoveBldActionPerformed(ActionEvent evt) {
         if (handler.getBuildings() != null) {
-            if (handler.getBuildings().getBuilds().size() > 0) {
+            if (!handler.getBuildings().getBuilds().isEmpty()) {
                 int index = jlBuildFile.getSelectedIndex();
                 handler.getBuildings().getBuilds().remove(index);
 
@@ -1126,7 +1097,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
                 updateViewBuildFileList(jlBuildFile.getSelectedIndex());
                 updateViewNitroDisplayMap();
             } catch (Exception ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
         }
     }
@@ -1139,7 +1110,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
 
                 updateViewNitroDisplayMapBuildProperties(jlBuildFile.getSelectedIndex());
             } catch (Exception ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
         }
     }
@@ -1152,7 +1123,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
 
                 updateViewNitroDisplayMapBuildProperties(jlBuildFile.getSelectedIndex());
             } catch (Exception ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
         }
 
@@ -1167,7 +1138,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
 
                 updateViewNitroDisplayMapBuildProperties(jlBuildFile.getSelectedIndex());
             } catch (Exception ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
         }
     }
@@ -1180,7 +1151,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
 
                 updateViewNitroDisplayMapBuildProperties(jlBuildFile.getSelectedIndex());
             } catch (Exception ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
         }
     }
@@ -1193,7 +1164,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
 
                 updateViewNitroDisplayMapBuildProperties(jlBuildFile.getSelectedIndex());
             } catch (Exception ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
         }
     }
@@ -1206,13 +1177,13 @@ public class BuildingEditorDialogDPPt extends JDialog {
 
                 updateViewNitroDisplayMapBuildProperties(jlBuildFile.getSelectedIndex());
             } catch (Exception ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
         }
     }
 
     private void jbChooseModelBldActionPerformed(ActionEvent evt) {
-        if (handler.getBuildings().getBuilds().size() > 0) {
+        if (!handler.getBuildings().getBuilds().isEmpty()) {
             final AddBuildModelDialog dialog = new AddBuildModelDialog(handler.getMainFrame());
             dialog.init(buildHandler.getBuildModelList(), null);
             dialog.setLocationRelativeTo(this);
@@ -1284,7 +1255,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
                         }
                     }
                 } catch (Exception ex) {
-                    ex.printStackTrace();
+                    log.warn(ex);
                 }
             }
 
@@ -1324,8 +1295,8 @@ public class BuildingEditorDialogDPPt extends JDialog {
             if (removedTexs > 0 || removedPals > 0) {
                 JOptionPane.showMessageDialog(this,
                         "Textures and palettes succesfully removed.\n"
-                                + "- " + String.valueOf(removedTexs) + " textures removed\n"
-                                + "- " + String.valueOf(removedPals) + " palettes removed",
+                                + "- " + removedTexs + " textures removed\n"
+                                + "- " + removedPals + " palettes removed",
                         "Data removed", JOptionPane.INFORMATION_MESSAGE);
             } else {
                 JOptionPane.showMessageDialog(this,
@@ -1342,7 +1313,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
                 nsbtxPanel.updateViewPaletteNameList(0);
                 nsbtxPanel.updateView();
             } catch (Exception ex2) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
             JOptionPane.showMessageDialog(this,
                     "There was a problem removing the textures and palettes.",
@@ -1363,14 +1334,6 @@ public class BuildingEditorDialogDPPt extends JDialog {
 
         updateViewBuildFileList(0);
         updateViewNitroDisplayMap();
-
-        /*updateViewMaterialOrderList(jlMaterialOrder.getSelectedIndex());
-        updateViewBuildAnimeList(jlSelectedAnimationsList.getSelectedIndex());
-        updateViewAreaDataList(jlAreaDataList.getSelectedIndex());
-        updateViewAreaDataProperties();
-        updateViewBuildTsetList(jlBuildTsetList.getSelectedIndex());
-        updateViewAreaBuildList(jlAreaBuildList.getSelectedIndex());
-        updateViewAnimationsList(jlAnimationsList.getSelectedIndex());*/
     }
 
     private void updateViewBuildModelList(int indexSelected) {
@@ -1389,14 +1352,13 @@ public class BuildingEditorDialogDPPt extends JDialog {
 
             List<Build> builds = handler.getBuildings().getBuilds();
 
-            DefaultListModel listModel = new DefaultListModel();
-            for (int i = 0; i < builds.size(); i++) {
-                Build build = builds.get(i);
+            DefaultListModel<String> listModel = new DefaultListModel<>();
+            for (Build build : builds) {
                 int buildID = build.getModeID();
                 if (buildID >= 0 && buildID < buildHandler.getBuildModelList().getSize()) {
-                    listModel.addElement(String.valueOf(buildID) + ": " + buildHandler.getBuildModelList().getModelsName().get(buildID));
+                    listModel.addElement(buildID + ": " + buildHandler.getBuildModelList().getModelsName().get(buildID));
                 } else {
-                    listModel.addElement(String.valueOf(buildID) + ": " + "NOT FOUND");
+                    listModel.addElement(buildID + ": " + "NOT FOUND");
                 }
             }
             jlBuildFile.setModel(listModel);
@@ -1432,7 +1394,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
             if (!materials.isEmpty()) {
                 names = new ArrayList<>(materials.size());
                 for (Integer material : materials) {
-                    names.add("Material " + String.valueOf(material));
+                    names.add("Material " + material);
                 }
             } else {
                 names = new ArrayList<>();
@@ -1451,7 +1413,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
             if (!animations.isEmpty()) {
                 selectedAnimIconIndices = new ArrayList<>(animations.size());
                 for (Integer animID : animations) {
-                    names.add(String.valueOf(animID) + ": "
+                    names.add(animID + ": "
                             + buildHandler.getBuildModelAnims().getAnimations().get(animID).getName() + " ["
                             + buildHandler.getBuildModelAnims().getAnimationTypeName(animID) + "]");
                     selectedAnimIconIndices.add(buildHandler.getBuildModelAnims().getAnimationType(animID));
@@ -1464,7 +1426,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
             jcbAnimationType.setSelectedIndex(animType + 1);
             jcbAnimationTypeEnabled.value = true;
 
-            boolean slopeAnim = buildHandler.getBuildModelAnimeList().getSlopeAnimations().get(jlBuildModel.getSelectedIndex()).booleanValue();
+            boolean slopeAnim = buildHandler.getBuildModelAnimeList().getSlopeAnimations().get(jlBuildModel.getSelectedIndex());
             jcbSlope.setSelected(slopeAnim);
         }
     }
@@ -1511,12 +1473,12 @@ public class BuildingEditorDialogDPPt extends JDialog {
             jlAreaBuildListEnabled.value = false;
             final int selectedTileset = jlBuildTsetList.getSelectedIndex();
             ArrayList<Integer> IDs = buildHandler.getAreaBuildList().getAreaBuilds().get(selectedTileset).getBuildingIDs();
-            DefaultListModel listModel = new DefaultListModel();
-            for (int i = 0; i < IDs.size(); i++) {
+            DefaultListModel<String> listModel = new DefaultListModel<>();
+            for (Integer id : IDs) {
                 try {
-                    listModel.addElement(String.valueOf(IDs.get(i)) + ": " + buildHandler.getBuildModelList().getModelsName().get(IDs.get(i)));
+                    listModel.addElement(id + ": " + buildHandler.getBuildModelList().getModelsName().get(id));
                 } catch (Exception ex) {
-                    listModel.addElement(String.valueOf(IDs.get(i)) + ": " + "NOT FOUND");
+                    listModel.addElement(id + ": " + "NOT FOUND");
                 }
             }
             jlAreaBuildList.setModel(listModel);
@@ -1534,7 +1496,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
             ArrayList<ModelAnimation> animations = buildHandler.getBuildModelAnims().getAnimations();
             animIconIndices = new ArrayList<>(animations.size());
             for (int i = 0; i < animations.size(); i++) {
-                names.add(String.valueOf(i) + ": "
+                names.add(i + ": "
                         + animations.get(i).getName() + " ["
                         + animations.get(i).getAnimationTypeName() + "]");
                 animIconIndices.add(animations.get(i).getAnimationType());
@@ -1585,7 +1547,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
                 nitroDisplayMap.getObjectsGL().get(jlBuildFile.getSelectedIndex() + 1).setDrawBounds(true);
             }
         } catch (Exception ex) {
-            ex.printStackTrace();
+            log.warn(ex);
         }
     }
 
@@ -1593,7 +1555,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
         BuildFile buildFile = handler.getBuildings();
 
         for (int i = 1, size = nitroDisplayMap.getObjectsGL().size(); i < size; i++) {
-            nitroDisplayMap.getObjectsGL().remove(nitroDisplayMap.getObjectsGL().size() - 1);
+            nitroDisplayMap.getObjectsGL().removeLast();
         }
 
         for (int i = 0; i < buildFile.getBuilds().size(); i++) {
@@ -1610,7 +1572,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
                 byte[] data = buildHandler.getBuildModelList().getModelsData().get(build.getModeID());
                 object.setNsbmdData(data);
             } catch (Exception ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
 
             try {
@@ -1619,7 +1581,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
                     loadAnimationInNitroDisplay(nitroDisplayMap, 1 + i, anim);
                 }
             } catch (Exception ex) {
-                ex.printStackTrace();
+                log.warn(ex);
             }
 
             object.setX(build.getX() * 16.0f);
@@ -1634,45 +1596,6 @@ public class BuildingEditorDialogDPPt extends JDialog {
 
         setBoundingBoxes();
     }
-
-    /*
-    public void updateViewNitroDisplayMap() {
-        BuildFile buildFile = handler.getBuildings();
-
-        for (int i = 1, size = nitroDisplayMap.getObjectsGL().size(); i < size; i++) {
-            nitroDisplayMap.getObjectsGL().remove(nitroDisplayMap.getObjectsGL().size() - 1);
-        }
-
-        for (int i = 0; i < buildFile.getBuilds().size(); i++) {
-            Build build = buildFile.getBuilds().get(i);
-
-            byte[] data = buildHandler.getBuildModelList().getModelsData().get(build.getModeID());
-            ObjectGL object;
-            try {
-                object = nitroDisplayMap.getObjectGL(1 + i);
-            } catch (Exception ex) {
-                nitroDisplayMap.getObjectsGL().add(new ObjectGL());
-                object = nitroDisplayMap.getObjectGL(1 + i);
-            }
-            object.setNsbmdData(data);
-
-            for (Integer animIndex : buildHandler.getBuildModelAnimeList().getAnimations().get(build.getModeID())) {
-                BuildAnimation anim = buildHandler.getBuildModelAnims().getAnimations().get(animIndex);
-                loadAnimationInNitroDisplay(nitroDisplayMap, 1 + i, anim);
-            }
-
-            object.setX(build.getX() * 16.0f);
-            object.setY(build.getY() * 16.0f);
-            object.setZ(build.getZ() * 16.0f);
-            object.setScaleX(build.getScaleX());
-            object.setScaleY(build.getScaleY());
-            object.setScaleZ(build.getScaleZ());
-
-            nitroDisplayMap.requestUpdate();
-        }
-
-        setBoundingBoxes();
-    }*/
 
     public void updateViewNitroDisplayMapBuildProperties(int buildingIndex) {
         try {
@@ -1686,7 +1609,7 @@ public class BuildingEditorDialogDPPt extends JDialog {
             object.setScaleY(build.getScaleY());
             object.setScaleZ(build.getScaleZ());
         } catch (Exception ex) {
-            ex.printStackTrace();
+            log.warn(ex);
         }
     }
 
@@ -1699,14 +1622,14 @@ public class BuildingEditorDialogDPPt extends JDialog {
             nitroDisplayGL.getObjectGL(0).setNsbta(null);
             nitroDisplayGL.getObjectGL(0).setNsbva(null);
         } catch (Exception ex) {
-            ex.printStackTrace();
+            log.warn(ex);
         }
     }
 
     private void loadAnimationInNitroDisplay(NitroDisplayGL display, int objectIndex, ModelAnimation anim) {
         if (anim.getAnimationType() == ModelAnimation.TYPE_NSBCA) {
             NSBCAreader reader = new NSBCAreader(new ByteReader(anim.getData()));
-            display.getObjectGL(objectIndex).setNsbca((NSBCA) reader.readFile());
+            display.getObjectGL(objectIndex).setNsbca(reader.readFile());
             display.requestUpdate();
         } else if (anim.getAnimationType() == ModelAnimation.TYPE_NSBTA) {
             NSBTAreader reader = new NSBTAreader(new ByteReader(anim.getData()));
@@ -1717,16 +1640,11 @@ public class BuildingEditorDialogDPPt extends JDialog {
             display.getObjectGL(objectIndex).setNsbtp((NSBTP) reader.readFile());
             display.requestUpdate();
         }
-        /*else if (anim.getAnimationType() == BuildAnimation.TYPE_NSBMA) {
-            NSBMAreader reader = new NSBMAreader(new ByteReader(anim.getData()));
-            nitroDisplayGL1.getHandler().setNsbma((NSBMA) reader.readFile());
-            nitroDisplayGL1.requestUpdate();
-        }*/
     }
 
     public void tryLoadBuildFile() {
         try {
-            String filePath = handler.getMapMatrix().getFilePathWithCoords(handler.getMapMatrix().getMatrix(),
+            String filePath = MapMatrix.getFilePathWithCoords(handler.getMapMatrix().getMatrix(),
                     new File(handler.getMapMatrix().filePath).getParent(),
                     new File(handler.getMapMatrix().filePath).getName(),
                     handler.getMapSelected(), "nsbmd");
@@ -1745,22 +1663,8 @@ public class BuildingEditorDialogDPPt extends JDialog {
                 }
             }
         } catch (Exception ex) {
-            ex.printStackTrace();
+            log.warn(ex);
         }
-        /*
-        try {
-            File[] files = findFilesWithExtension(handler.getLastMapDirectoryUsed(), "nsbmd");
-            if (files.length > 0) {
-
-                byte[] mapData = Files.readAllBytes(files[0].toPath());
-                nitroDisplayMap.getObjectGL(0).setNsbmdData(mapData);
-
-                nitroDisplayMap.requestUpdate();
-            }
-        } catch (Exception ex) {
-ex.printStackTrace();
-}
-        */
     }
 
     private void saveBuildings() throws IOException {
@@ -1770,21 +1674,18 @@ ex.printStackTrace();
         handler.getBuildings().saveToFile(path + File.separator + filename);
     }
 
+    @SuppressWarnings("SameParameterValue")
     private static File[] findFilesWithExtension(String folderPath, String extension) {
         File dir = new File(folderPath);
 
-        return dir.listFiles(new FilenameFilter() {
-            public boolean accept(File dir, String filename) {
-                return filename.endsWith(extension);
-            }
-        });
+        return dir.listFiles((dir1, filename) -> filename.endsWith(extension));
     }
 
-    private static void addElementsToList(JList list, MutableBoolean listEnabled, String name, int numElements, int indexSelected) {
+    private static void addElementsToList(JList<String> list, MutableBoolean listEnabled, String name, int numElements, int indexSelected) {
         listEnabled.value = false;
-        DefaultListModel listModel = new DefaultListModel();
+        DefaultListModel<String> listModel = new DefaultListModel<>();
         for (int i = 0; i < numElements; i++) {
-            listModel.addElement(name + " " + String.valueOf(i));
+            listModel.addElement(name + " " + i);
         }
         list.setModel(listModel);
         listEnabled.value = true;
@@ -1795,11 +1696,11 @@ ex.printStackTrace();
 
     }
 
-    private static void addElementsToListWithIndices(JList list, MutableBoolean listEnabled, ArrayList<String> elements, int indexSelected) {
+    private static void addElementsToListWithIndices(JList<String> list, MutableBoolean listEnabled, ArrayList<String> elements, int indexSelected) {
         listEnabled.value = false;
-        DefaultListModel listModel = new DefaultListModel();
+        DefaultListModel<String> listModel = new DefaultListModel<>();
         for (int i = 0; i < elements.size(); i++) {
-            listModel.addElement(String.valueOf(i) + ": " + elements.get(i));
+            listModel.addElement(i + ": " + elements.get(i));
         }
         list.setModel(listModel);
         listEnabled.value = true;
@@ -1810,10 +1711,10 @@ ex.printStackTrace();
 
     }
 
-    private static void addElementsToList(JList list, ArrayList<String> elements, int indexSelected) {
-        DefaultListModel listModel = new DefaultListModel();
-        for (int i = 0; i < elements.size(); i++) {
-            listModel.addElement(elements.get(i));
+    private static void addElementsToList(JList<String> list, ArrayList<String> elements, int indexSelected) {
+        DefaultListModel<String> listModel = new DefaultListModel<>();
+        for (String element : elements) {
+            listModel.addElement(element);
         }
         list.setModel(listModel);
 
@@ -1821,7 +1722,7 @@ ex.printStackTrace();
         list.setSelectedIndex(indexSelected);
     }
 
-    private static void addIconToJList(JList list, ImageIcon icon) {
+    private static void addIconToJList(JList<String> list, ImageIcon icon) {
         list.setCellRenderer(new DefaultListCellRenderer() {
             @Override
             public Component getListCellRendererComponent(JList list, Object value, int index, boolean isSelected, boolean cellHasFocus) {
@@ -1836,6 +1737,7 @@ ex.printStackTrace();
         buildHandler.getBuildModelAnimeList().getSlopeAnimations().set(jlBuildModel.getSelectedIndex(), jcbSlope.isSelected());
     }
 
+    @SuppressWarnings({"Convert2Diamond", "FieldMayBeFinal", "Convert2MethodRef", "DataFlowIssue", "UnnecessaryUnicodeEscape"})
     private void initComponents() {
         // JFormDesigner - Component initialization - DO NOT MODIFY  //GEN-BEGIN:initComponents
         jTabbedPane1 = new JTabbedPane();
